--- a/slider/src/main/res/layout/row_slider.xml
+++ b/slider/src/main/res/layout/row_slider.xml
@@ -13,17 +13,8 @@
     <ImageView
         android:id="@+id/sliderImage"
         android:layout_width="match_parent"
+        android:foreground="?selectableItemBackgroundBorderless"
         android:layout_height="match_parent" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/image_shadow" />
-
-    <View
-        android:id="@+id/ripple"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ripple_effect" />
 
 </RelativeLayout>
