--- a/slider/src/main/res/layout/row_slider.xml
+++ b/slider/src/main/res/layout/row_slider.xml
@@ -7,8 +7,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_image" />
+        android:layout_centerInParent="true"/>
 
     <ImageView
         android:id="@+id/sliderImage"
