--- a/slider/src/main/res/layout/row_slider.xml
+++ b/slider/src/main/res/layout/row_slider.xml
@@ -13,8 +13,8 @@
 
     <ImageView
         android:id="@+id/sliderImage"
-        android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
+        android:paddingBottom="16dp"
         android:adjustViewBounds="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
