--- a/slider/src/main/res/layout/row_slider.xml
+++ b/slider/src/main/res/layout/row_slider.xml
@@ -1,23 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <!--place holder-->
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
     <ImageView
         android:id="@+id/sliderImage"
-        android:scaleType="centerCrop"
-        android:layout_marginBottom="32dp"
-        android:adjustViewBounds="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:paddingBottom="24dp"
+        android:scaleType="fitCenter" />
 
     <View
         android:id="@+id/ripple"
